--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -67,7 +67,7 @@
   {% for entry in site.data.contact %}
     {% capture url %}
       {%- if entry.type == 'github' -%}
-        https://github.com/{{ site.github.username }}
+        <!-- https://github.com/{{ site.github.username }} -->
       {%- elsif entry.type == 'twitter' -%}
         https://twitter.com/{{ site.twitter.username }}
       {%- elsif entry.type == 'email' -%}
