--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,6 +35,7 @@ layout: compress
 
     <div id="main-wrapper">
       <div id="main">
+        <div>Test</div>
 
         {% include refactor-content.html content=content %}
 
